gramatica.txt
PROGRAM          -> (STATEMENT | FUNCLIST)?
FUNCLIST         -> FUNCDEF FUNCLIST | FUNCDEF
FUNCDEF          -> def ident (PARAMLIST) { STATELIST }
PARAMLIST        -> ((int | float | string) ident , PARAMLIST | (int | float | string) ident)?

STATEMENT        -> VARDECL ;
                  | ATRIBSTAT ;
                  | PRINTSTAT ;
                  | READSTAT ;
                  | RETURNSTAT ;
                  | IFSTAT
                  | FORSTAT
                  | { STATELIST }
                  | break ;
                  | ;

VARDECL          -> (int | float | string) ident ( [ int_constant ] )*
ATRIBSTAT        -> LVALUE = (EXPRESSION | ALLOCEXPRESSION | FUNCCALL)
FUNCCALL         -> ident (PARAMLISTCALL)
PARAMLISTCALL    -> (ident , PARAMLISTCALL | ident)?
PRINTSTAT        -> print EXPRESSION
READSTAT         -> read LVALUE
RETURNSTAT       -> return
IFSTAT           -> if (EXPRESSION) STATEMENT (else STATEMENT)?
FORSTAT          -> for (ATRIBSTAT ; EXPRESSION ; ATRIBSTAT) STATEMENT
STATELIST        -> STATEMENT (STATELIST)?
ALLOCEXPRESSION  -> new (int | float | string) ( [ NUMEXPRESSION ] )+
EXPRESSION       -> NUMEXPRESSION ((< | > | <= | >= | == | !=) NUMEXPRESSION)?
NUMEXPRESSION    -> TERM ((+ | -) TERM)*
TERM             -> UNARYEXPR ((* | / | %) UNARYEXPR)*
UNARYEXPR        -> ((+ | -)?) FACTOR
FACTOR           -> int_constant
                  | float_constant
                  | string_constant
                  | null
                  | LVALUE
                  | (NUMEXPRESSION)
LVALUE           -> ident ( [ NUMEXPRESSION ] )*
